ver_4.5.0
Completely rewritten ReadAndWriteIO and Main for task 4.5